stat pour letrez
cc sese

--- a/statistique.html
+++ b/statistique.html
@@ -46,6 +46,218 @@
             Malgré cela, une reprise semble amorcée en fin de période, avec une légère remontée du nombre de licenciés en 2023, probablement soutenue par les préparatifs des Jeux Olympiques de 2024 et les efforts de promotion de la pratique de la voile par la FFV. Ce graphique illustre donc les fluctuations importantes du nombre de licenciés, influencées par des facteurs économiques et sanitaires.<p>
             </div>
         </div>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fédération</th>
+                        <th>Âge médian</th>
+                        <th>Part des femmes</th>
+                        <th>Nombre de licences</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Football</td>
+                        <td>15,5</td>
+                        <td>10</td>
+                        <td>2 127 500</td>
+                    </tr>
+                    <tr>
+                        <td>Tennis</td>
+                        <td>16,5</td>
+                        <td>30</td>
+                        <td>1 038 400</td>
+                    </tr>
+                    <tr>
+                        <td>Équitation</td>
+                        <td>13,5</td>
+                        <td>85</td>
+                        <td>682 400</td>
+                    </tr>
+                    <tr>
+                        <td>Basketball</td>
+                        <td>13,5</td>
+                        <td>34</td>
+                        <td>525 500</td>
+                    </tr>
+                    <tr>
+                        <td>Judo</td>
+                        <td>8,5</td>
+                        <td>32</td>
+                        <td>467 300</td>
+                    </tr>
+                    <tr>
+                        <td>Handball</td>
+                        <td>14,5</td>
+                        <td>38</td>
+                        <td>453 200</td>
+                    </tr>
+                    <tr>
+                        <td>Golf</td>
+                        <td>56,5</td>
+                        <td>27</td>
+                        <td>420 200</td>
+                    </tr>
+                    <tr>
+                        <td>Natation</td>
+                        <td>10,5</td>
+                        <td>55</td>
+                        <td>374 300</td>
+                    </tr>
+                    <tr>
+                        <td>Rugby</td>
+                        <td>19,5</td>
+                        <td>12</td>
+                        <td>350 700</td>
+                    </tr>
+                    <tr>
+                        <td>Athlétisme</td>
+                        <td>17,5</td>
+                        <td>48</td>
+                        <td>299 600</td>
+                    </tr>
+                    <tr>
+                        <td>Gymnastique</td>
+                        <td>8,5</td>
+                        <td>83</td>
+                        <td>284 100</td>
+        <tr>
+                        <td>Voile</td>
+                        <td>12,5</td>
+                        <td>37</td>
+                        <td>262 700</td>
+                    </tr>
+                    <tr>
+                        <td>Tir</td>
+                        <td>48,5</td>
+                        <td>11</td>
+                        <td>243 800</td>
+                    </tr>
+                    <tr>
+                        <td>Volley</td>
+                        <td>14,5</td>
+                        <td>46</td>
+                        <td>182 900</td>
+                    </tr>
+                    <tr>
+                        <td>Badminton</td>
+                        <td>26,5</td>
+                        <td>36</td>
+                        <td>178 300</td>
+                    </tr>
+        <tr>
+                        <td>Tennis de Table</td>
+                        <td>23,5</td>
+                        <td>15</td>
+                        <td>157 600</td>
+                    </tr>
+                    <tr>
+                        <td>Cyclisme</td>
+                        <td>17,5</td>
+                        <td>12</td>
+                        <td>108 800</td>
+                    </tr>
+                    <tr>
+                        <td>Escalade</td>
+                        <td>15,5</td>
+                        <td>46</td>
+                        <td>102 500</td>
+                    </tr>
+                    <tr>
+                        <td>Danse</td>
+                        <td>20,5</td>
+                        <td>85</td>
+                        <td>71 400</td>
+                    </tr>
+                    <tr>
+                        <td>Tir à l'Arc</td>
+                        <td>31,5</td>
+                        <td>34</td>
+                        <td>68 500</td>
+                    </tr>
+                    <tr>
+                        <td>Roller/skateboard</td>
+                        <td>12,5</td>
+                        <td>52</td>
+                        <td>63 000</td>
+                    </tr>
+                    <tr>
+                        <td>Triathlon</td>
+                        <td>35,5</td>
+                        <td>28</td>
+                        <td>57 900</td>
+                    </tr>
+                    <tr>
+                        <td>Escrime</td>
+                        <td>12,5</td>
+                        <td>32</td>
+                        <td>52 400</td>
+                    </tr>
+                    <tr>
+                        <td>Boxe</td>
+                        <td>18,5</td>
+                        <td>28</td>
+                        <td>50 200</td>
+                    </tr>
+                    <tr>
+                        <td>Aviron</td>
+                        <td>40,5</td>
+                        <td>45</td>
+                        <td>44 500</td>
+                    </tr>
+        <tr>
+                        <td>Taekwondo</td>
+                        <td>10,5</td>
+                        <td>41</td>
+                        <td>41 400</td>
+                    </tr>
+                    <tr>
+                        <td>Canoë-kayak</td>
+                        <td>26,5</td>
+                        <td>33</td>
+                        <td>37 800</td>
+                    </tr>
+                    <tr>
+                        <td>Lutte</td>
+                        <td>14,5</td>
+                        <td>20</td>
+                        <td>22 800</td>
+                    </tr>
+                    <tr>
+                        <td>Haltérophilie</td>
+                        <td>33,5</td>
+                        <td>39</td>
+                        <td>17 500</td>
+                    </tr>
+        <tr>
+                        <td>Hockey sur gazon</td>
+                        <td>13,5</td>
+                        <td>28</td>
+                        <td>16 200</td>
+                    </tr>
+                    <tr>
+                        <td>Surf</td>
+                        <td>18,5</td>
+                        <td>36</td>
+                        <td>14 700</td>
+                    </tr>
+                    <tr>
+                        <td>Pentathlon moderne</td>
+                        <td>13,5</td>
+                        <td>38</td>
+                        <td>2 800</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td><strong>Ensemble</strong></td>
+                        <td><strong>15,5</strong></td>
+                        <td><strong>33</strong></td>
+                        <td><strong>8 820 900</strong></td>
+                    </tr>
+                </table>
+        </div>
     </article>
 
     <footer>
