--- a/biographie.html
+++ b/biographie.html
@@ -26,13 +26,14 @@
     </ul>
 </nav>
 <body>
+    <h2>Intro</h2>
     <div id="intro">Charline Picon, Jean-Baptiste Bernaz et Lauriane Nolot incarnent l’élite de la voile française. Passion, discipline et audace rythment leurs carrières, marquées par des défis relevés avec panache sur les plus grandes compétitions internationales.</div>
 
     <div class="fond">
         <div id="picon" class="skipper">
             <h3>Charline Picon</h3>
             <div class="carte">
-                <img src="images/charline_picon.jpg" alt="Charline Picon">
+                <img src="images/charline_picon.jpg" alt="Charline Picon" id="photo_skipper">
                 <p>Charline Picon commence la planche à voile à l'âge de 10 ans et rejoint l'équipe de France en 2006, à 20 ans. Lors de ses premiers Jeux Olympiques en 2012, elle termine à la 8ème place dans l'épreuve de RS:X femme. En 2014, à Santander, elle remporte la médaille d'or, exploit qu'elle réitère en 2016.<br>
                 Palmarès :<br>
                 - Jeux Olympiques : 1 or, 1 argent, 1 bronze<br>
@@ -47,7 +48,7 @@
             <h3>Laurianne Nolot</h3>
             <div class="carte">
                 <img src="images/laurianne_nolot.jpg" alt="Laurianne Nolot">
-                <p>Laurianne Nolot commence le kitesurf à l'âge de 17 ans et apprend le kitefoil avec ses parents à 18 ans. Elle commence les compétitions à 19 ans. En 2021, à 23 ans, elle devient championne de France, vice-championne d'Europe et remporte une médaille de bronze au championnat du monde. En 2022, elle intègre l'équipe de France, devient championne d'Europe et vice-championne du monde. En 2023, elle remporte toutes ses compétitions.<br>
+                <p>Laurianne Nolot commence le kitesurf à l'âge de 17 ans et apprend le kitefoil avec ses parents à 18 ans. Elle commence les compétitions à 19 ans. En 2021, à 23 ans, elle devient championne de France, vice-championne d'Europe et remporte une médaille de bronze aux Championnats du Monde. En 2022, elle intègre l'équipe de France, devient championne d'Europe et vice-championne du monde. En 2023, elle remporte toutes ses compétitions.<br>
                 Palmarès :<br>
                 - Jeux Olympiques : 1 médaille d'argent<br>
                 - Championnats du monde : 2 or, 1 argent, 1 bronze<br>
@@ -62,12 +63,12 @@
             <h3>Jean-Baptiste Bernaz</h3>
             <div class="carte">
                 <img src="images/jean_baptiste.png" alt="Jean-Baptiste Bernaz">
-                <p>Jean-Baptiste Bernaz intègre l'équipe de France en 2006, à l'âge de 19 ans. Il participe à plusieurs Jeux Olympiques sans monter sur le podium. Cependant, il remporte la médaille d'or aux Jeux Méditerranéens en 2009 et 2022, ainsi que la médaille d'argent en 2013. En 2007, il termine deuxième au championnat d'Europe et devient champion du monde en 2017 et 2022.<br>
+                <p>Jean-Baptiste Bernaz intègre l'équipe de France en 2006, à l'âge de 19 ans. Il participe à plusieurs Jeux Olympiques sans monter sur le podium. Cependant, il remporte la médaille d'or aux Jeux Méditerranéens en 2009 et 2022, ainsi que la médaille d'argent en 2013. En 2007, il termine 2ème aux championnats d'Europe et devient champion du monde en 2017 et 2022.<br>
                 Palmarès :<br>
                 - Jeux Olympiques : 5e place comme meilleur classement<br>
                 - Championnats du monde : 1 or, 1 argent<br>
                 - Championnats d'Europe : 1 or, 2 argent<br>
-                - Jeux Méditérranéens : 2 or, 1 argent<br>
+                - Jeux Méditerranéens : 2 or, 1 argent<br>
                 - Élu marin de l'année en 2022</p>
             </div>
         </div>
@@ -82,4 +83,12 @@
         <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
     </ul>
 </nav>
+
+<footer>
+    <img id="logo" src="./images/Logo_voile_paris2024.svg">
+    <a href="./mention.html"><p id="ml">Mentions Légales</p></a>
+    <p id="ct">Contactez la ffv</p>
+    <a href="https://www.facebook.com/ffvoile"><img id="fb" src="./images/logo_facebook.png"></a>
+    <a href="https://www.instagram.com/ffvoile/"><img id="ins" src="./images/logo_instagram.webp"></a>
+</footer>
 </html>
