--- a/classement.html
+++ b/classement.html
@@ -21,11 +21,10 @@
       </nav>
         <div>
             <h2>Intro</h2>
-            <p>Découvrez les performances des meilleurs navigateurs olympiques sur cette page dédiée aux classements ! Nous vous présentons les 10 premiers athlètes ou équipes de chaque catégorie de voile, mettant en avant les talents qui se démarquent sur la scène internationale. Ces classements offrent un aperçu rapide des compétiteurs les plus performants et des moments clés des Jeux Olympiques. Idéal pour suivre les résultats des grandes épreuves, en particulier les performances des Français dans leur quête de médailles.</p>
+            <p id="intro">Découvrez les performances des meilleurs navigateurs olympiques sur cette page dédiée aux classements ! Nous vous présentons les 10 premiers athlètes ou équipes de chaque catégorie de voile, mettant en avant les talents qui se démarquent sur la scène internationale. Ces classements offrent un aperçu rapide des compétiteurs les plus performants et des moments clés des Jeux Olympiques. Idéal pour suivre les résultats des grandes épreuves, en particulier les performances des Français dans leur quête de médailles. Le comptage des points dans les épreuves de voile aux Jeux Olympiques repose sur un système de régates à points.<br>Lors de chaque course, les participants sont classés en fonction de leur position à l'arrivée. Le classement donne un nombre de points, où le dernier à franchir la ligne obtient le plus grand nombre de points et le premier obtient le moins de points, généralement égal au nombre de participants. Par exemple, dans une régate à 10 compétiteurs, le premier recevra 1 point, le deuxième 2 points, et ainsi de suite. À la fin de toutes les courses de la compétition, les points de chaque marin sont additionnés, et le total le plus bas détermine le vainqueur.<br>Cependant, il existe des règles spécifiques pour gérer les mauvaises performances : les résultats les moins favorables peuvent être supprimés. Par exemple, un compétiteur peut avoir sa pire régate annulée ou ne pas compter, selon le format de la compétition et le nombre de courses disputées. Ce système vise à donner plus d'importance à la régularité et à la constance des performances plutôt qu'à un seul coup de chance dans une course donnée. En cas d'égalité entre plusieurs athlètes à la fin des régates, des critères supplémentaires comme les positions dans les dernières courses peuvent être utilisés pour départager les compétiteurs.</p>
         </div>
         <div class="separer">
         <!-- Classement 1 -->
-      <div id="tableaux">
         <table>
             <thead>
               <tr>
@@ -817,7 +816,6 @@
             </tbody>
         </table>
         </div>
-      </div>
 
 
     </body>
