--- a/statistique.html
+++ b/statistique.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-
+        <img id="logo_head" src="./images/Logo_voile_paris2024.svg">
+        <h1>Cap sur Paris 2024</h1>
+        <div id="titre"><p>La voile en France</p></div>
+        <div id="accueil"><a href="./index.html">Accueil</a></div>
     </header>
 
     <nav id="nav_haut">
