--- a/classement.html
+++ b/classement.html
@@ -820,6 +820,10 @@
 
     </body>
     <footer>
-
+      <img id="logo" src="./images/Logo_voile_paris2024.svg">
+      <a href="./mention.html"><p id="ml">Mentions Légales</p></a>
+      <p id="ct">Contactez la ffv</p>
+      <a href="https://www.facebook.com/ffvoile"><img id="fb" src="./images/logo_facebook.png"></a>
+      <a href="https://www.instagram.com/ffvoile/"><img id="ins" src="./images/logo_instagram.webp"></a>
     </footer>
 </html>
