--- a/sponsors.html
+++ b/sponsors.html
@@ -117,3 +117,11 @@
             <a href="./index.html"><div><p>acceuil</p></div></a>
         </ul>
     </nav>
+    <footer>
+        <img id="logo" src="./images/Logo_voile_paris2024.svg">
+        <a href="./mention.html"><p id="ml">Mentions Légales</p></a>
+        <p id="ct">Contactez la ffv</p>
+        <a href="https://www.facebook.com/ffvoile"><img id="fb" src="./images/logo_facebook.png"></a>
+        <a href="https://www.instagram.com/ffvoile/"><img id="ins" src="./images/logo_instagram.webp"></a>
+    </footer>
+</body>
