--- a/sponsors.html
+++ b/sponsors.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=2">
     <meta name="viewport" content="width=device-width, initial-scale=3">
-    <title>statistique</title>
+    <title>sponsor</title>
     <link type="text/css" href="CSS/style_sponsors.css" rel="stylesheet">
 </head>
 <body>
