manque le footer/header pour le téléphone

--- a/sponsors.html
+++ b/sponsors.html
@@ -9,7 +9,12 @@
     <link type="text/css" href="CSS/style_sponsors.css" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img id="logo_head" src="./images/Logo_voile_paris2024.svg">
+        <h1>Cap sur Paris 2024</h1>
+        <div id="titre"><p>Les sponsors</p></div>
+        <div id="accueil"><a href="./index.html">Accueil</a></div>
+    </header>
     <nav id="nav_haut">
         <ul>
             <a href="./biographie.html"><div><p>Biographies</p></div></a>
